--- a/playbooks_vars/install.yml
+++ b/playbooks_vars/install.yml
@@ -1,6 +1,7 @@
 ---
-- hosts: webservers
-  sudo: true
+- hosts: webservers 
+  become: yes
+  become_method: sudo
   vars:
     packages: [ 'vim', 'git', 'curl' ]
   tasks:
