--- a/playbooks_vars/hosts.yml
+++ b/playbooks_vars/hosts.yml
@@ -3,6 +3,8 @@ all:
     localhost:
   children:
     webservers:
-      basic-ubuntu:
+      hosts:
+        basic-ubuntu:
     database:
-      basic-ubuntu:      
+      hosts:
+        basic-ubuntu:      
