--- a/playbooks_vars/hosts.yml
+++ b/playbooks_vars/hosts.yml
@@ -4,7 +4,7 @@ all:
   children:
     webservers:
       hosts:
-        basic-ubuntu:
+        ubuntu-basic:
     database:
       hosts:
-        basic-ubuntu:      
+        ubuntu-basic:      
