--- a/playbooks_vars/install.yml
+++ b/playbooks_vars/install.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: webservers 
   become: yes
-  become_method: sudo
+  become_user: root
   vars:
     packages: [ 'vim', 'git', 'curl' ]
   tasks:
