Modifying playbooks_vars/install.yml

--- a/playbooks_vars/hosts.yml
+++ b/playbooks_vars/hosts.yml
@@ -3,8 +3,6 @@ all:
     localhost:
   children:
     webservers:
-      hosts:
-        ubuntu-basic:
+      basic-ubuntu:
     database:
-      hosts:
-        ubuntu-basic:      
+      basic-ubuntu:      
