--- a/playbooks_vars/install.yml
+++ b/playbooks_vars/install.yml
@@ -4,11 +4,15 @@
   become_method: sudo
   become_user: root
   vars:
-    packages: [ 'vim', 'git', 'curl' ]
+    packages: [vim, git, curl]
   tasks:
-  - name: Install Package
+  - name: Ping Servers
+    ping:
+  - name: Debug: print variables
     debug: 
-      msg: "{{ item }}"
+      msg: "{{ packages }}" 
+    ping:
+  - name: Install Package    
     apt: name={{ item }} state=latest
     with_items: 
       - "{{ packages  }}"
