--- a/roles/apache/tasks/configure.yml
+++ b/roles/apache/tasks/configure.yml
@@ -5,4 +5,5 @@ copy: src=index.html dest=/var/www/html/index.html
 
 - name: copy the image resource
 copy: src=Blue_marble_2015.jpg dest=/var/www/html/Blue_marble_2015.jpg
-notify: restart apache service
+notify: 
+  restart apache service
