--- a/playbooks/install-gcc.yml
+++ b/playbooks/install-gcc.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: webservers
-  become: enable
-  become_user: root
+  become: yes
   become_method: sudo
+  become_user: root
   tasks:
   - name: Install gcc
     apt:
