--- a/playbooks/install-restart-apache.yml
+++ b/playbooks/install-restart-apache.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: webservers
   become: yes
+  become_method: sudo
   become_user: root
-  tasks:
   - name: Install apache2
     apt:
       name: apache2
